syntax = "proto3";
package syscalls;

service Syscall {
    rpc Open   (OpenRequest)   returns (SyscallResponse);
    rpc Read   (ReadRequest)   returns (SyscallResponse);
    rpc Write  (WriteRequest)  returns (SyscallResponse);
    rpc Close  (CloseRequest)  returns (SyscallResponse);
    rpc Remove (RemoveRequest) returns (SyscallResponse);
    rpc Fsync  (FsyncRequest)  returns (SyscallResponse);
    rpc Mkdir  (DirRequest)    returns (SyscallResponse);
    rpc Rmdir  (DirRequest)    returns (SyscallResponse);
    rpc Fstat  (FstatRequest)  returns (FstatResponse);
}

message OpenRequest {
    string path = 1;
    int32 flags = 2;
    uint32 mode = 3;
}

message ReadRequest {
    bool pread = 1;
    int32 fd = 2;
    uint32 size = 3;
    int64 offset = 4;
}

message WriteRequest {
    bool pwrite = 1;
    int32 fd = 2;
    bytes page = 3;
    uint32 len = 4;
    int64 offset = 5;
}

message CloseRequest {
    int32 fd = 1;
}

message RemoveRequest {
    string path = 1;
}

message FsyncRequest {
    int32 fd = 1;
}

message DirRequest {
    string path = 1;
    uint32 mode = 2;
}

message FstatRequest {
    int32 fd = 1;
}

message FstatResponse {
    sint32 result = 1;
    int64 size = 2;
}

message SyscallResponse {
    sint32 result = 1;
    bytes page = 2;
}
